tests/error/lessThanInteger-wrong-2nd-argument-pair-integer--integer-.uplc
(program 1.0.0[[(builtin lessThanInteger)(con integer 10)](con pair(integer)(integer) (90, 93))])